WIP: daemon: implement a persistent server
Add the ability to start a server in the foreground. This is intended to
allow tools such as systemd to start a server without any clients so
that it may be connected to later. In addition, the server is allowed to
have no clients and sessions associated with it.

--- a/tmux.1
+++ b/tmux.1
@@ -23,7 +23,7 @@
 .Sh SYNOPSIS
 .Nm tmux
 .Bk -words
-.Op Fl 2CluvV
+.Op Fl 2CDEluvV
 .Op Fl c Ar shell-command
 .Op Fl f Ar file
 .Op Fl L Ar socket-name
@@ -119,6 +119,10 @@ This option is for compatibility with
 when
 .Nm
 is used as a login shell.
+.It Fl D
+Start a persistent server.
+.It Fl E
+Request that the server shut down.
 .It Fl f Ar file
 Specify an alternative configuration file.
 By default,
